Update comment for clarity in codeql.yml (#49)
* Update comment for clarity in codeql.yml

* Refactor nuget.exe download script to PowerShell

Updated the script to use PowerShell syntax for checking and downloading nuget.exe.

* Update CodeQL workflow to include AuthServer project

* Change shell to PowerShell for NuGet CLI download

* Refactor CodeQL workflow for NuGet and build process

Updated the workflow to ensure nuget.exe is downloaded if missing, changed the build command to use dotnet CLI, and improved comments for clarity.

* Update NuGet CLI download method to PowerShell

* Modify CodeQL workflow for Java 8 and PowerShell

Updated CodeQL workflow to use PowerShell Core and set up Java 8.

* Change Nexus Lifecycle Scan to self-hosted runner

* Use GitHub secrets for Nexus IQ Scan credentials

Updated Nexus IQ Scan environment variables to use GitHub secrets.

* Refactor Nexus IQ scan step in codeql.yml

Updated Nexus IQ scan command to use SCAN_TYPE variable.

* Add Nexus Lifecycle Scan to CodeQL workflow

* Fix syntax for uploading Nexus IQ JSON artifact

* Update CodeQL workflow paths for CLI and project

* Improve readability of IQ scan command in workflow

Refactor command to run IQ scan for better readability.

* Update scan-type in CodeQL workflow

* Update codeql.yml

* Update CodeQL commands to use project path

* Modify CodeQL commands to output JSON reports

Updated CodeQL workflow to output reports in JSON format.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -148,54 +148,60 @@ jobs:
           verbose: true
           args: --report-format=json --report-path=gitleaks-results.json
 
+  # -------------------
+  # 2️⃣ Nexus Lifecycle Scan
+  # -------------------
   nexus-lifecycle:
     name: Nexus Lifecycle Scan
-    runs-on: windows-latest
+    runs-on: self-hosted
     needs: build-test
-    strategy:
-      matrix:
-        scan-type: [release, source, stage, build]
+  
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
   
-      # Ensure nuget.exe
-      - name: Download NuGet CLI
+      - name: Ensure NuGet CLI
+        shell: cmd
         run: |
           if not exist nuget.exe (
             curl -L -o nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
           )
   
-      # Restore packages
       - name: Restore NuGet Packages
-        run: |
-          nuget.exe restore MyProject.csproj -PackagesDirectory Packages
+        shell: cmd
+        run: nuget.exe restore AuthServer.csproj -PackagesDirectory Packages
   
-      # Build project
       - name: Build Project
-        run: |
-          msbuild MyProject.csproj /t:Build /p:Configuration=Release
+        shell: cmd
+        run: dotnet build AuthServer.csproj --configuration Release --no-restore
   
-      # Run Nexus IQ Scan
-      - name: Run Nexus IQ Scan
+      - name: Run Nexus IQ Scans
+        shell: cmd
         env:
           IQ_USER: ${{ secrets.IQ_USER }}
           IQ_PASS: ${{ secrets.IQ_PASS }}
         run: |
-          java -jar tools/cli.jar `
-            -i "MyProject" `
-            -s http://192.168.70.35:8070 `
-            -a $env:IQ_USER:$env:IQ_PASS `
-            -t ${{ matrix.scan-type }} `
-            MyProject.csproj `
-            -o json > iq-results-${{ matrix.scan-type }}.json
+          set CLI="%GITHUB_WORKSPACE%\tools\cli.jar"
+          set PROJ="%GITHUB_WORKSPACE%\AuthServer.csproj"
+          set OUT="%GITHUB_WORKSPACE%"
   
-      # Upload JSON
-      - name: Upload Nexus IQ JSON
+          java -jar %CLI% -i "PeoplecoreAuthServer" -s http://192.168.70.35:8070 -a %IQ_USER%:%IQ_PASS% -t source  "%GITHUB_WORKSPACE%\AuthServer.csproj" -o json > iq-source.json
+          java -jar %CLI% -i "PeoplecoreAuthServer" -s http://192.168.70.35:8070 -a %IQ_USER%:%IQ_PASS% -t build  " %GITHUB_WORKSPACE%\AuthServer.csproj" -o json > iq-build.json
+          java -jar %CLI% -i "PeoplecoreAuthServer" -s http://192.168.70.35:8070 -a %IQ_USER%:%IQ_PASS% -t stage-release   "%GITHUB_WORKSPACE%\AuthServer.csproj" -o json > iq-stage-release.json
+          java -jar %CLI% -i "PeoplecoreAuthServer" -s http://192.168.70.35:8070 -a %IQ_USER%:%IQ_PASS% -t release "%GITHUB_WORKSPACE%\AuthServer.csproj" -o json > iq-release.json
+  
+      - name: Upload Nexus IQ Reports
         uses: actions/upload-artifact@v4
         with:
-          name: iq-json-${{ matrix.scan-type }}
-          path: iq-results-${{ matrix.scan-type }}.json
+          name: nexus-iq-results
+          path: |
+            iq-source.json
+            iq-build.json
+            iq-stage.json
+            iq-release.json
+
 
   # -------------------
   # 3️⃣ Optional Deploy
