Simplify Nexus IQ scan steps in codeql.yml
Refactor Nexus IQ scan steps for clarity and efficiency.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -148,9 +148,6 @@ jobs:
           verbose: true
           args: --report-format=json --report-path=gitleaks-results.json
 
-  # -------------------
-  # 2️⃣ Nexus Lifecycle Scan (DRY)
-  # -------------------
   nexus-lifecycle:
     name: Nexus Lifecycle Scan
     runs-on: self-hosted
@@ -184,10 +181,7 @@ jobs:
         run: |
           dotnet build "%PROJ%" --configuration Release --no-restore
 
-      # -------------------
-      # Reusable Nexus scan step
-      # -------------------
-      - &nexus-scan-step
+      - name: Nexus IQ – Source
         shell: cmd
         env:
           IQ_USER: ${{ secrets.IQ_USER }}
@@ -201,40 +195,34 @@ jobs:
             goto :found
           )
           :found
-          echo App Name: %APP_NAME%
-          echo Project: %PROJ%
+          java -jar "%CLI%" -i "%APP_NAME%" -s "%IQ_SERVER_URL%" -a %IQ_USER%:%IQ_PASS% -t source "%PROJ%" -o json > iq-source.json
 
-      # -------------------
-      # Source Scan
-      # -------------------
-      - <<: *nexus-scan-step
-        name: Nexus IQ – Source
-        run: |
-          %CLI% -jar "%CLI%" -i "%APP_NAME%" -s "%IQ_SERVER_URL%" -a %IQ_USER%:%IQ_PASS% -t source "%PROJ%" -o json > iq-source.json
-
-      # -------------------
-      # Build Scan
-      # -------------------
-      - <<: *nexus-scan-step
-        name: Nexus IQ – Build
+      - name: Nexus IQ – Build
+        shell: cmd
+        env:
+          IQ_USER: ${{ secrets.IQ_USER }}
+          IQ_PASS: ${{ secrets.IQ_PASS }}
+          IQ_SERVER_URL: ${{ secrets.IQ_SERVER_URL }}
         run: |
           java -jar "%CLI%" -i "%APP_NAME%" -s "%IQ_SERVER_URL%" -a %IQ_USER%:%IQ_PASS% -t build "%PROJ%" -o json > iq-build.json
 
-      # -------------------
-      # Stage Release Scan (develop PR or push)
-      # -------------------
-      - <<: *nexus-scan-step
-        name: Nexus IQ – Stage Release
+      - name: Nexus IQ – Stage Release
         if: (github.event_name == 'pull_request' && github.base_ref == 'develop') || (github.event_name == 'push' && github.ref == 'refs/heads/develop')
+        shell: cmd
+        env:
+          IQ_USER: ${{ secrets.IQ_USER }}
+          IQ_PASS: ${{ secrets.IQ_PASS }}
+          IQ_SERVER_URL: ${{ secrets.IQ_SERVER_URL }}
         run: |
           java -jar "%CLI%" -i "%APP_NAME%" -s "%IQ_SERVER_URL%" -a %IQ_USER%:%IQ_PASS% -t stage-release "%PROJ%" -o json > iq-stage-release.json
 
-      # -------------------
-      # Release Scan (main PR or push)
-      # -------------------
-      - <<: *nexus-scan-step
-        name: Nexus IQ – Release
+      - name: Nexus IQ – Release
         if: (github.event_name == 'pull_request' && github.base_ref == 'main') || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+        shell: cmd
+        env:
+          IQ_USER: ${{ secrets.IQ_USER }}
+          IQ_PASS: ${{ secrets.IQ_PASS }}
+          IQ_SERVER_URL: ${{ secrets.IQ_SERVER_URL }}
         run: |
           java -jar "%CLI%" -i "%APP_NAME%" -s "%IQ_SERVER_URL%" -a %IQ_USER%:%IQ_PASS% -t release "%PROJ%" -o json > iq-release.json
 
